--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-font-size-editor></app-font-size-editor>
+<!--<app-font-size-editor></app-font-size-editor>-->
+<!--<app-pet></app-pet><br>-->
+<!--Product-->
+<!--<app-product></app-product>-->
+<app-calculator></app-calculator>
